Fix bugs and improve Plugin Hub compliance
Bug fixes:
- ClogResult.itemNames: HashMap -> ConcurrentHashMap (thread safety
  between client thread writes and EDT reads)
- Restore ToolTipManager dismiss delay on plugin shutdown (was
  permanently modifying global RuneLite tooltip behavior)
- Remove dead showAccountType config option (never wired up)
- Null check on sprite callback in getSpriteAsync
- Fix deprecated client.createMenuEntry() -> client.getMenu().createMenuEntry()

Compliance:
- Add support URL to runelite-plugin.properties
- Sync plugin.properties description and tags with root properties
- URLEncoder: use StandardCharsets.UTF_8 (no checked exception)
- User-Agent: add GitHub repo URL per OSRS Wiki API policy

Also includes pre-existing changes:
- Add Brutus to BOSS_NAMES for correct hiscore CSV parsing
- Add boss rank tracking and colored rank display in tooltips

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>